language/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OPENBLOCK
    CLOSEBLOCK

Grammar

Rule 0     S' -> start
Rule 1     start -> PROBLEM ID newline program
Rule 2     program -> statement
Rule 3     newline -> NEWLINE newline
Rule 4     newline -> NEWLINE
Rule 5     statement -> block
Rule 6     statement -> ifstatement
Rule 7     statement -> whilestatement
Rule 8     statement -> dowhilestatement
Rule 9     statement -> CONTINUE newline
Rule 10    statement -> BREAK newline
Rule 11    statement -> returnstatement
Rule 12    statement -> simplestatement
Rule 13    statement -> empty
Rule 14    statement -> newline
Rule 15    block -> statement
Rule 16    block -> statement block
Rule 17    ifstatement -> IF OPENPARAM expression CLOSEPARAM statement
Rule 18    ifstatement -> IF OPENPARAM expression CLOSEPARAM statement ELSE statement
Rule 19    whilestatement -> WHILE OPENPARAM expression CLOSEPARAM newline statement
Rule 20    dowhilestatement -> DO statement WHILE OPENPARAM expression CLOSEPARAM newline
Rule 21    returnstatement -> RETURN expression newline
Rule 22    simplestatement -> decs
Rule 23    simplestatement -> expression
Rule 24    decs -> dec newline decs
Rule 25    decs -> dec newline
Rule 26    dec -> vardec
Rule 27    dec -> arraydec
Rule 28    dec -> functiondec
Rule 29    dec -> functiondefn
Rule 30    dec -> structuredec
Rule 31    vardec -> type iddec
Rule 32    iddec -> ID newline
Rule 33    iddec -> ID COMMA iddec
Rule 34    iddec -> ID EQUALS literal newline
Rule 35    iddec -> ID EQUALS literal COMMA iddec
Rule 36    arraydec -> ARRAY type ID newline
Rule 37    arraydec -> ARRAY type ID EQUALS OPENARRAY literalslist CLOSEARRAY newline
Rule 38    functiondec -> FUNCTION ID OPENPARAM paramlist CLOSEPARAM
Rule 39    functiondec -> FUNCTION ID OPENPARAM paramlist CLOSEPARAM newline
Rule 40    paramlist -> type ID
Rule 41    paramlist -> type ID COMMA paramlist
Rule 42    paramlist -> empty
Rule 43    functiondefn -> functiondec newline BEGIN block returnstatement END newline
Rule 44    structuredec -> STRUCTURE ID newline BEGIN newline decs END newline
Rule 45    literal -> STRINGLITERAL
Rule 46    literal -> INTEGERLITERAL
Rule 47    literal -> CHARLITERAL
Rule 48    literal -> DECIMALLITERAL
Rule 49    literal -> TRUE
Rule 50    literal -> FALSE
Rule 51    literalslist -> literal
Rule 52    literalslist -> literal COMMA literalslist
Rule 53    expression -> expression INCREMENT
Rule 54    expression -> expression DECREMENT
Rule 55    expression -> unaryop expression
Rule 56    expression -> indexaccess
Rule 57    expression -> memberaccess
Rule 58    expression -> functioncall
Rule 59    expression -> OPENPARAM expression CLOSEPARAM
Rule 60    expression -> expression biop expression
Rule 61    expression -> primaryexpression
Rule 62    expression -> expression newline
Rule 63    unaryop -> INCREMENT
Rule 64    unaryop -> DECREMENT
Rule 65    unaryop -> NOT
Rule 66    unaryop -> PLUS
Rule 67    unaryop -> MINUS
Rule 68    unaryop -> PERCENTAGE
Rule 69    biop -> MULTIPLY
Rule 70    biop -> DIVIDE
Rule 71    biop -> MODULO
Rule 72    biop -> PLUS
Rule 73    biop -> MINUS
Rule 74    biop -> AND
Rule 75    biop -> OR
Rule 76    biop -> LT
Rule 77    biop -> GT
Rule 78    biop -> LTE
Rule 79    biop -> GTE
Rule 80    biop -> EQUALCOMPARISON
Rule 81    biop -> NOTEQUALS
Rule 82    indexaccess -> expression OPENARRAY expression CLOSEARRAY
Rule 83    memberaccess -> expression OF ID
Rule 84    functioncall -> ID OPENPARAM callarguments CLOSEPARAM
Rule 85    callarguments -> ID
Rule 86    callarguments -> literalslist
Rule 87    callarguments -> ID COMMA callarguments
Rule 88    callarguments -> literalslist COMMA callarguments
Rule 89    primaryexpression -> literal
Rule 90    primaryexpression -> ID
Rule 91    type -> INTEGER
Rule 92    type -> CHAR
Rule 93    type -> STRING
Rule 94    type -> BOOLEAN
Rule 95    type -> DECIMAL
Rule 96    empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
ARRAY                : 36 37
BEGIN                : 43 44
BOOLEAN              : 94
BREAK                : 10
CHAR                 : 92
CHARLITERAL          : 47
CLOSEARRAY           : 37 82
CLOSEBLOCK           : 
CLOSEPARAM           : 17 18 19 20 38 39 59 84
COMMA                : 33 35 41 52 87 88
CONTINUE             : 9
DECIMAL              : 95
DECIMALLITERAL       : 48
DECREMENT            : 54 64
DIVIDE               : 70
DO                   : 20
ELSE                 : 18
END                  : 43 44
EQUALCOMPARISON      : 80
EQUALS               : 34 35 37
FALSE                : 50
FUNCTION             : 38 39
GT                   : 77
GTE                  : 79
ID                   : 1 32 33 34 35 36 37 38 39 40 41 44 83 84 85 87 90
IF                   : 17 18
INCREMENT            : 53 63
INTEGER              : 91
INTEGERLITERAL       : 46
LT                   : 76
LTE                  : 78
MINUS                : 67 73
MODULO               : 71
MULTIPLY             : 69
NEWLINE              : 3 4
NOT                  : 65
NOTEQUALS            : 81
OF                   : 83
OPENARRAY            : 37 82
OPENBLOCK            : 
OPENPARAM            : 17 18 19 20 38 39 59 84
OR                   : 75
PERCENTAGE           : 68
PLUS                 : 66 72
PROBLEM              : 1
RETURN               : 21
STRING               : 93
STRINGLITERAL        : 45
STRUCTURE            : 44
TRUE                 : 49
WHILE                : 19 20
error                : 

Nonterminals, with rules where they appear

arraydec             : 27
biop                 : 60
block                : 5 16 43
callarguments        : 84 87 88
dec                  : 24 25
decs                 : 22 24 44
dowhilestatement     : 8
empty                : 13 42
expression           : 17 18 19 20 21 23 53 54 55 59 60 60 62 82 82 83
functioncall         : 58
functiondec          : 28 43
functiondefn         : 29
iddec                : 31 33 35
ifstatement          : 6
indexaccess          : 56
literal              : 34 35 51 52 89
literalslist         : 37 52 86 88
memberaccess         : 57
newline              : 1 3 9 10 14 19 20 21 24 25 32 34 36 37 39 43 43 44 44 44 62
paramlist            : 38 39 41
primaryexpression    : 61
program              : 1
returnstatement      : 11 43
simplestatement      : 12
start                : 0
statement            : 2 15 16 17 18 18 19 20
structuredec         : 30
type                 : 31 36 37 40 41
unaryop              : 55
vardec               : 26
whilestatement       : 7

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROBLEM ID newline program

    PROBLEM         shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PROBLEM . ID newline program

    ID              shift and go to state 3


state 3

    (1) start -> PROBLEM ID . newline program
    (3) newline -> . NEWLINE newline
    (4) newline -> . NEWLINE

    NEWLINE         shift and go to state 4

    newline                        shift and go to state 5

state 4

    (3) newline -> NEWLINE . newline
    (4) newline -> NEWLINE .
    (3) newline -> . NEWLINE newline
    (4) newline -> . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    CONTINUE        reduce using rule 4 (newline -> NEWLINE .)
    BREAK           reduce using rule 4 (newline -> NEWLINE .)
    IF              reduce using rule 4 (newline -> NEWLINE .)
    WHILE           reduce using rule 4 (newline -> NEWLINE .)
    DO              reduce using rule 4 (newline -> NEWLINE .)
    RETURN          reduce using rule 4 (newline -> NEWLINE .)
    OPENPARAM       reduce using rule 4 (newline -> NEWLINE .)
    INCREMENT       reduce using rule 4 (newline -> NEWLINE .)
    DECREMENT       reduce using rule 4 (newline -> NEWLINE .)
    NOT             reduce using rule 4 (newline -> NEWLINE .)
    PLUS            reduce using rule 4 (newline -> NEWLINE .)
    MINUS           reduce using rule 4 (newline -> NEWLINE .)
    PERCENTAGE      reduce using rule 4 (newline -> NEWLINE .)
    ID              reduce using rule 4 (newline -> NEWLINE .)
    ARRAY           reduce using rule 4 (newline -> NEWLINE .)
    FUNCTION        reduce using rule 4 (newline -> NEWLINE .)
    STRUCTURE       reduce using rule 4 (newline -> NEWLINE .)
    STRINGLITERAL   reduce using rule 4 (newline -> NEWLINE .)
    INTEGERLITERAL  reduce using rule 4 (newline -> NEWLINE .)
    CHARLITERAL     reduce using rule 4 (newline -> NEWLINE .)
    DECIMALLITERAL  reduce using rule 4 (newline -> NEWLINE .)
    TRUE            reduce using rule 4 (newline -> NEWLINE .)
    FALSE           reduce using rule 4 (newline -> NEWLINE .)
    INTEGER         reduce using rule 4 (newline -> NEWLINE .)
    CHAR            reduce using rule 4 (newline -> NEWLINE .)
    STRING          reduce using rule 4 (newline -> NEWLINE .)
    BOOLEAN         reduce using rule 4 (newline -> NEWLINE .)
    DECIMAL         reduce using rule 4 (newline -> NEWLINE .)
    $end            reduce using rule 4 (newline -> NEWLINE .)
    ELSE            reduce using rule 4 (newline -> NEWLINE .)
    BEGIN           reduce using rule 4 (newline -> NEWLINE .)
    END             reduce using rule 4 (newline -> NEWLINE .)
    OPENARRAY       reduce using rule 4 (newline -> NEWLINE .)
    OF              reduce using rule 4 (newline -> NEWLINE .)
    MULTIPLY        reduce using rule 4 (newline -> NEWLINE .)
    DIVIDE          reduce using rule 4 (newline -> NEWLINE .)
    MODULO          reduce using rule 4 (newline -> NEWLINE .)
    AND             reduce using rule 4 (newline -> NEWLINE .)
    OR              reduce using rule 4 (newline -> NEWLINE .)
    LT              reduce using rule 4 (newline -> NEWLINE .)
    GT              reduce using rule 4 (newline -> NEWLINE .)
    LTE             reduce using rule 4 (newline -> NEWLINE .)
    GTE             reduce using rule 4 (newline -> NEWLINE .)
    EQUALCOMPARISON reduce using rule 4 (newline -> NEWLINE .)
    NOTEQUALS       reduce using rule 4 (newline -> NEWLINE .)
    CLOSEPARAM      reduce using rule 4 (newline -> NEWLINE .)
    CLOSEARRAY      reduce using rule 4 (newline -> NEWLINE .)
    NEWLINE         shift and go to state 4

  ! NEWLINE         [ reduce using rule 4 (newline -> NEWLINE .) ]

    newline                        shift and go to state 6

state 5

    (1) start -> PROBLEM ID newline . program
    (2) program -> . statement
    (5) statement -> . block
    (6) statement -> . ifstatement
    (7) statement -> . whilestatement
    (8) statement -> . dowhilestatement
    (9) statement -> . CONTINUE newline
    (10) statement -> . BREAK newline
    (11) statement -> . returnstatement
    (12) statement -> . simplestatement
    (13) statement -> . empty
    (14) statement -> . newline
    (15) block -> . statement
    (16) block -> . statement block
    (17) ifstatement -> . IF OPENPARAM expression CLOSEPARAM statement
    (18) ifstatement -> . IF OPENPARAM expression CLOSEPARAM statement ELSE statement
    (19) whilestatement -> . WHILE OPENPARAM expression CLOSEPARAM newline statement
    (20) dowhilestatement -> . DO statement WHILE OPENPARAM expression CLOSEPARAM newline
    (21) returnstatement -> . RETURN expression newline
    (22) simplestatement -> . decs
    (23) simplestatement -> . expression
    (96) empty -> .
    (3) newline -> . NEWLINE newline
    (4) newline -> . NEWLINE
    (24) decs -> . dec newline decs
    (25) decs -> . dec newline
    (53) expression -> . expression INCREMENT
    (54) expression -> . expression DECREMENT
    (55) expression -> . unaryop expression
    (56) expression -> . indexaccess
    (57) expression -> . memberaccess
    (58) expression -> . functioncall
    (59) expression -> . OPENPARAM expression CLOSEPARAM
    (60) expression -> . expression biop expression
    (61) expression -> . primaryexpression
    (62) expression -> . expression newline
    (26) dec -> . vardec
    (27) dec -> . arraydec
    (28) dec -> . functiondec
    (29) dec -> . functiondefn
    (30) dec -> . structuredec
    (63) unaryop -> . INCREMENT
    (64) unaryop -> . DECREMENT
    (65) unaryop -> . NOT
    (66) unaryop -> . PLUS
    (67) unaryop -> . MINUS
    (68) unaryop -> . PERCENTAGE
    (82) indexaccess -> . expression OPENARRAY expression CLOSEARRAY
    (83) memberaccess -> . expression OF ID
    (84) functioncall -> . ID OPENPARAM callarguments CLOSEPARAM
    (89) primaryexpression -> . literal
    (90) primaryexpression -> . ID
    (31) vardec -> . type iddec
    (36) arraydec -> . ARRAY type ID newline
    (37) arraydec -> . ARRAY type ID EQUALS OPENARRAY literalslist CLOSEARRAY newline
    (38) functiondec -> . FUNCTION ID OPENPARAM paramlist CLOSEPARAM
    (39) functiondec -> . FUNCTION ID OPENPARAM paramlist CLOSEPARAM newline
    (43) functiondefn -> . functiondec newline BEGIN block returnstatement END newline
    (44) structuredec -> . STRUCTURE ID newline BEGIN newline decs END newline
    (45) literal -> . STRINGLITERAL
    (46) literal -> . INTEGERLITERAL
    (47) literal -> . CHARLITERAL
    (48) literal -> . DECIMALLITERAL
    (49) literal -> . TRUE
    (50) literal -> . FALSE
    (91) type -> . INTEGER
    (92) type -> . CHAR
    (93) type -> . STRING
    (94) type -> . BOOLEAN
    (95) type -> . DECIMAL

  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for OPENPARAM resolved as shift
  ! shift/reduce conflict for INCREMENT resolved as shift
  ! shift/reduce conflict for DECREMENT resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PERCENTAGE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ARRAY resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for STRUCTURE resolved as shift
  ! shift/reduce conflict for STRINGLITERAL resolved as shift
  ! shift/reduce conflict for INTEGERLITERAL resolved as shift
  ! shift/reduce conflict for CHARLITERAL resolved as shift
  ! shift/reduce conflict for DECIMALLITERAL resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
    CONTINUE        shift and go to state 51
    BREAK           shift and go to state 50
    IF              shift and go to state 45
    WHILE           shift and go to state 18
    DO              shift and go to state 7
    RETURN          shift and go to state 9
    $end            reduce using rule 96 (empty -> .)
    NEWLINE         shift and go to state 4
    OPENPARAM       shift and go to state 13
    INCREMENT       shift and go to state 35
    DECREMENT       shift and go to state 48
    NOT             shift and go to state 54
    PLUS            shift and go to state 28
    MINUS           shift and go to state 21
    PERCENTAGE      shift and go to state 31
    ID              shift and go to state 44
    ARRAY           shift and go to state 14
    FUNCTION        shift and go to state 34
    STRUCTURE       shift and go to state 53
    STRINGLITERAL   shift and go to state 15
    INTEGERLITERAL  shift and go to state 37
    CHARLITERAL     shift and go to state 23
    DECIMALLITERAL  shift and go to state 30
    TRUE            shift and go to state 20
    FALSE           shift and go to state 47
    INTEGER         shift and go to state 41
    CHAR            shift and go to state 46
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 17
    DECIMAL         shift and go to state 38

  ! CONTINUE        [ reduce using rule 96 (empty -> .) ]
  ! BREAK           [ reduce using rule 96 (empty -> .) ]
  ! IF              [ reduce using rule 96 (empty -> .) ]
  ! WHILE           [ reduce using rule 96 (empty -> .) ]
  ! DO              [ reduce using rule 96 (empty -> .) ]
  ! RETURN          [ reduce using rule 96 (empty -> .) ]
  ! NEWLINE         [ reduce using rule 96 (empty -> .) ]
  ! OPENPARAM       [ reduce using rule 96 (empty -> .) ]
  ! INCREMENT       [ reduce using rule 96 (empty -> .) ]
  ! DECREMENT       [ reduce using rule 96 (empty -> .) ]
  ! NOT             [ reduce using rule 96 (empty -> .) ]
  ! PLUS            [ reduce using rule 96 (empty -> .) ]
  ! MINUS           [ reduce using rule 96 (empty -> .) ]
  ! PERCENTAGE      [ reduce using rule 96 (empty -> .) ]
  ! ID              [ reduce using rule 96 (empty -> .) ]
  ! ARRAY           [ reduce using rule 96 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 96 (empty -> .) ]
  ! STRUCTURE       [ reduce using rule 96 (empty -> .) ]
  ! STRINGLITERAL   [ reduce using rule 96 (empty -> .) ]
  ! INTEGERLITERAL  [ reduce using rule 96 (empty -> .) ]
  ! CHARLITERAL     [ reduce using rule 96 (empty -> .) ]
  ! DECIMALLITERAL  [ reduce using rule 96 (empty -> .) ]
  ! TRUE            [ reduce using rule 96 (empty -> .) ]
  ! FALSE           [ reduce using rule 96 (empty -> .) ]
  ! INTEGER         [ reduce using rule 96 (empty -> .) ]
  ! CHAR            [ reduce using rule 96 (empty -> .) ]
  ! STRING          [ reduce using rule 96 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 96 (empty -> .) ]
  ! DECIMAL         [ reduce using rule 96 (empty -> .) ]
